--- a/Programs/index.html
+++ b/Programs/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <pre><h1>                                               <i>Krishna</i></h1>
-    <p>                             <img src="\Programs/Krishna.jpg" width="1000" ></p>
+    <p>                             <img src="\Krishna\Programs/Krishna.jpg" width="1000" ></p>
     </pre>
 </body>
 </html>
+
