--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>KRISHNA</title>
 </head>
 <body>
-    <pre><h1>                                               <i>Krishna</i></h1>
-    <p>                             <img src="Programs/Krishna.jpg" width="1000" ></p>
-    </pre>
+    <h1 style="text-align: center;"><i>Krishna</i></h1>
+    <div style="text-align: center;">
+        <img src="Programs/Krishna.jpg" width="100%" alt="Krishna Image">
+    </div>
 </body>
 </html>
-
