--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>KRISHNA</title>
 </head>
 <body>
-    <h1 style="text-align: center;"><i>Krishna</i></h1>
+    <h1><i>Krishna</i></h1>
     <div style="text-align: center;">
         <img src="Programs/Krishna.jpg" width="100%" alt="Krishna Image">
     </div>
 </body>
 </html>
+
