--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
     <h1 style="text-align: center;"><i>Krishna</i></h1>
     <div style="text-align: center;">
-        <img src="Programs/Krishna.jpg" width="100%" alt="Krishna Image">
+        <img src="Programs\Krishna.jpg" width="100%" alt="Krishna Image">
     </div>
 </body>
 </html>
-
 
